kubeflow/examples/authorizationpolicy.allow-isvc.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-isvc
  namespace:
spec:
  rules:
  - {}
  selector:
    matchLabels:
      serving.kserve.io/inferenceservice:
