kubeflow/examples/authorizationpolicy.allow-service.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-service
  namespace:
spec:
  rules:
  - {}
  targetRef:
    group: 
    kind: Service
    name: <SERVICE_NAME>
    namespace: <SAME_NAMESPACE>
